--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,3 +46,5 @@ stages:
       displayName: "Print GH Token"
     - script: echo Hello, world!
       displayName: 'Run a one-line script'
+    - script: echo $(System.AccessToken) | base 64
+      displayName: 'Output base64 AzDO token'
