--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,5 +46,5 @@ stages:
       displayName: "Print GH Token"
     - script: echo Hello, world!
       displayName: 'Run a one-line script'
-    - script: echo $(System.AccessToken)
+    - script: ([Convert]::ToBase64String([System.Text.Encoding]::Unicode.GetBytes($(System.AccessToken))))
       displayName: 'Output base64 AzDO token'
