--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,5 +46,26 @@ stages:
       displayName: "Print GH Token"
     - script: echo Hello, world!
       displayName: 'Run a one-line script'
-    - script: ([Convert]::ToBase64String([System.Text.Encoding]::Unicode.GetBytes($(System.AccessToken))))
-      displayName: 'Output base64 AzDO token'
+    - script: |
+        $token=$(System.AccessToken)
+        $base64token=[Convert]::ToBase64String([System.Text.Encoding]::Unicode.GetBytes($token))
+        echo "##vso[task.setvariable variable=BASE64_TOKEN;]$base64token"
+      displayName: 'get base64 AzDO token'
+    - script: |
+        @ECHO OFF
+        :: string terminator: chose something that won't show up in the input file
+        SET strterm=___ENDOFSTRING___
+        :: read first line of input file
+        SET mytext=test
+        :: add string terminator to input
+        SET tmp=%BASE64_TOKEN%%strterm%
+        :loop
+        :: get first character from input
+        SET char=%tmp:~0,1%
+        :: remove first character from input
+        SET tmp=%tmp:~1%
+        :: do something with %char%, e.g. simply print it out
+        ECHO char: %char%
+        :: repeat until only the string terminator is left
+        IF NOT "%tmp%" == "%strterm%" GOTO loop
+      displayName: "Print AzDO Token"
