Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,6 +8,12 @@ trigger:
 
 pool: default
 
+resources:
+  repositories:
+    - repository: ebogatenkov
+      type: git
+      name: ebogatenkov
+
 stages:
 - stage: Build
   jobs:
