Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,9 +10,9 @@ pool: default
 
 resources:
   repositories:
-    - repository: ebogatenkov
+    - repository: proj
       type: git
-      name: ebogatenkov
+      name: proj
 
 stages:
 - stage: Build
