Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,7 +22,7 @@ resources:
     endpoint: github.com_ebogatenkov
 
 steps:
-- checkout: common
+#- checkout: common
 - task: PowerShell@2
   inputs:
     targetType: 'inline'
