--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,12 +16,12 @@ variables:
   buildPlatform: 'Any CPU'
   buildConfiguration: 'Release'
 
-resources:
-  repositories:
-  - repository: common
-    type: github
-    name: ebogatenkov/SmartHotel360-Website
-    endpoint: github.com_ebogatenkov
+# resources:
+#   repositories:
+#   - repository: common
+#     type: github
+#     name: ebogatenkov/SmartHotel360-Website
+#     endpoint: github.com_ebogatenkov
 
 steps:
 #- checkout: common
