--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,15 +17,15 @@ variables:
   buildPlatform: 'Any CPU'
   buildConfiguration: 'Release'
 
-# resources:
-#   repositories:
-#   - repository: common
-#     type: github
-#     name: ebogatenkov/SmartHotel360-Website
-#     endpoint: github.com_ebogatenkov
+resources:
+   repositories:
+   - repository: common
+     type: github
+     name: ebogatenkov/SmartHotel360-Website
+     endpoint: github.com_ebogatenkov
 
 steps:
-#- checkout: common
+- checkout: common
 - task: PowerShell@2
   inputs:
     targetType: 'inline'
